# Hackathon-Physical-And-AI-Humanoid-Rebortics-Textbook

./: .env  .gitignore  requirements.txt  setup_env.sh  tmpclaude-9a5d-cwd
.specify/memory/: constitution.md
backend/: .env  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieve.py  test_agent.py  test_api_integration.py  test_integration.py
frontend/: docusaurus.config.ts  package-lock.json  sidebars.ts
frontend/docs/: intro.md
frontend/docs/module-1/: chapter-1-introduction.md  chapter-2-communication-primitives.md  chapter-3-ai-robot-bridge.md
frontend/docs/module-2-digital-twin/: gazebo-physics.md  intro.md  sensors-simulation.md
frontend/docs/module-3-ai-brain/: navigation-planning.md  perception-training.md  spatial-intelligence.md
specs/001-ai-agent-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/digital-twin-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/isaac-ai-brain-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/ros2-robotics-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/vla-autonomous-humanoid/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+63 files in other folders)
